syntax = "proto3";

package streamlit_and_go;

option go_package = "./";

service Greeter {
  // クライアントからのリクエストに対して挨拶を返す
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
